--- a/site/public/css/register.css
+++ b/site/public/css/register.css
@@ -39,12 +39,12 @@
 .register main div a{
     text-transform: uppercase;
 }
-.register main form span{
+/* .register main form span{
     color: #000;
     border-bottom: 1px solid var(--color-4);
     padding-bottom: 5px;
     font-size: 12px;
-}
+} */
 .register main form a{
     text-transform: uppercase;
 }
@@ -55,6 +55,11 @@
 
 .register article.insta{
     display: none;
+}
+
+.register main form span{
+    color: red;
+    font-size: 14px;
 }
 
 @media (min-width: 480px){
@@ -101,9 +106,9 @@
     .register main div p{
         font-size: 20px;
     }
-    .register main form span{
+/*     .register main form span{
         font-size: 20px;
-    }
+    } */
 
     /* section */
 
