--- a/site/public/css/products.css
+++ b/site/public/css/products.css
@@ -15,6 +15,7 @@
     margin: 30px auto;
     padding: 20px 15px;
     width: 80%;
+    height: 75%;
     background-color: var(--color-2);
     border: 2px solid var(--color-4);
     border-radius: 5px;
