--- a/site/src/views/partials/head.ejs
+++ b/site/src/views/partials/head.ejs
@@ -4,5 +4,5 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/style.css">
     <script src="https://kit.fontawesome.com/b5b4548719.js" crossorigin="anonymous"></script>
-    <title>AGVSHAINK</title>
+    <title>Seven Store</title>
 </head>
