--- a/site/src/views/products/productDetail.ejs
+++ b/site/src/views/products/productDetail.ejs
@@ -5,6 +5,7 @@
 </head>
 <body class="productDetail">
     <header>
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/glider-js@1.7.7/glider.min.css">
         <%- include('../partials/header') %>
     </header>
     <main>
@@ -26,72 +27,77 @@
                         <h3>$<%= product.price %> </h3>
                     </div>
                     <div class="seccion2">
-                        <h4>color:</h4>
+                        <% if (product.color.length !== 0) { %>
+                            <h4>color:</h4>
+                            <form action="resultado.html" method="POST">
+                                <input type="radio" id="color1" name="color">
+                                <label class="color1" for="color1"></label>
+                                <input type="radio" id="color2" name="color">
+                                <label class="color2" for="color2"></label>
+                                <input type="radio" id="color3" name="color">
+                                <label class="color3" for="color3"></label>
+                            </form>
+                        <% } %>
                         <form action="resultado.html" method="POST">
-                            <input type="radio" id="color1" name="color">
-		                    <label class="color1" for="color1"></label>
-                            <input type="radio" id="color2" name="color">
-		                    <label class="color2" for="color2"></label>
-                            <input type="radio" id="color3" name="color">
-		                    <label class="color3" for="color3"></label>
-                        </form>
-                        <h4>talle:</h4>
-                        <form action="resultado.html" method="POST">
-                            <input type="radio" id="talle1" name="talle">
-		                    <label class="talle1" for="talle1"></label>
+                            <% if (product.talle.length !== 0) { %>
+                                <h4>talle:</h4> 
+                                <select>
+                                    <% product.talle.forEach(size => { %>
+                                    <option value="<%= size %>"><%= size %> </option>
+                                    <% }) %>
+                                </select>
+                            <% } %>
+<!--                        <input class="talle" type="radio" name="talle">
+                            <label class="talle1" for="talle1"></label>
                             <input type="radio" id="talle2" name="talle">
 		                    <label class="talle2" for="talle2"></label>
                             <input type="radio" id="talle3" name="talle">
-		                    <label class="talle3" for="talle3"></label>
+		                    <label class="talle3" for="talle3"></label> -->
+                            <h4>cantidad:</h4>
+                            <select>
+                                <option value=1>1</option>
+                                <option value=2>2</option>
+                                <option value=3>3</option>
+                                <option value=4>4</option>
+                                <option value=5>5</option>
+                                <option value=6>6</option>
+                                <option value=7>7</option>
+                                <option value=8>8</option>
+                                <option value=9>9</option>
+                                <option value=10>10</option>
+                            </select>
+                            <button class="agregar">
+                                <p>Agregar al carrito</p>
+                            </button>
                         </form>
-                        <h4>cantidad:</h4>
-                        <select>
-                            <option value=1>1</option>
-                            <option value=2>2</option>
-                            <option value=3>3</option>
-                            <option value=4>4</option>
-                            <option value=5>5</option>
-                            <option value=6>6</option>
-                            <option value=7>7</option>
-                            <option value=8>8</option>
-                            <option value=9>9</option>
-                            <option value=10>10</option>
-                        </select>
-                        <button class="agregar">
-                            <p>agregar al carrito</p>
-                        </button>
                     </div>
                 </article>
             </article>
         <section class="relacionado">
-            <div>
-                <hr><h3>relacionado</h3><hr>
+            <div class="title">
+                <hr><h3>Relacionado</h3><hr>
             </div>
-            <div class="productos-relacionados">
-                <article class="producto1">
-                    <img src="/img/producto3.jpeg" alt="">
-                    <i class="fas fa-chevron-left"></i>
-                    <i class="fas fa-chevron-right"></i>
-                    <h6>nombre del producto</h6>
-                    <p class="categoria">categoria</p>
-                    <p class="precio">9999.99</p>
-                </article>
-                <article class="producto2">
-                    <img src="/img/producto3.jpeg" alt="">
-                    <i class="fas fa-chevron-left"></i>
-                    <i class="fas fa-chevron-right"></i>
-                    <h6>nombre del producto</h6>
-                    <p class="categoria">categoria</p>
-                    <p class="precio">9999.99</p>
-                </article>
-                <article class="producto3">
-                    <img src="/img/producto3.jpeg" alt="">
-                    <i class="fas fa-chevron-left"></i>
-                    <i class="fas fa-chevron-right"></i>
-                    <h6>nombre del producto</h6>
-                    <p class="categoria">categoria</p>
-                    <p class="precio">9999.99</p>
-                </article>
+            <div class="cotainer">
+                <div class="glider-contain">
+                    <button class="glider-prev">
+                        <i class="fas fa-chevron-left"></i>
+                    </button>
+                    <button class="glider-next">
+                        <i class="fas fa-chevron-right"></i>
+                    </button>
+                    <div class="glider">
+                        <% products.forEach(product => { %>
+                            <a href="/products/detail/<%= product.id %> ">
+                                <div class="element">
+                                    <img src="/img/<%= product.image1 %> " alt="">
+                                    <h6><%= product.name %> </h6>
+                                    <p class="categoria"><%= product.category %> </p>
+                                    <p class="precio">$<%= product.price %> </p>
+                                </div>
+                            </a>
+                        <% }) %>
+                    </div>
+                </div>
             </div>
         </section>
         <article class="ig">
@@ -112,5 +118,7 @@
     <footer>
         <%- include('../partials/footer') %>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/glider-js@1.7.7/glider.min.js"></script>
+    <script src="/javascripts/carousel.js"></script>
 </body>
 </html>
