--- a/site/src/views/products/productDetail.ejs
+++ b/site/src/views/products/productDetail.ejs
@@ -11,10 +11,10 @@
         <h2><%= product.name %> </h2>
             <article class="producto">
                 <div class="imagenes">
-                    <img class="modelo1" src="/img/<%= product.image1 %>" alt="">
+                    <img class="modelo1" src="/img/<%= product.images[0] %>" alt="">
                     <div class="imgenes-secundarias">
-                        <img class="modelo2" src="/img/<%= product.image2 %>" alt="">
-                        <img class="modelo3" src="/img/<%= product.image3 %>" alt="">
+                        <img class="modelo2" src="/img/<%= product.images[1] %>" alt="">
+                        <img class="modelo3" src="/img/<%= product.images[3] %>" alt="">
                     </div>
                 </div>
                 <i class="fas fa-chevron-left"></i>        
