--- a/site/src/views/admin.ejs
+++ b/site/src/views/admin.ejs
@@ -17,7 +17,7 @@
             <article>
                 <div class="image">
                     <a href="/products/detail/<%= product.id %> ">
-                        <img src="/img/<%= product.image1 %> " alt="">
+                        <img src="/img/<%= product.images[0] %> " alt="">
                     </a>
                 </div>
                 <div class="name">
