correcciones en index - vistas dinamicas -

--- a/site/public/css/index.css
+++ b/site/public/css/index.css
@@ -331,6 +331,7 @@
     }
 
     .home .container-slider {
+        box-sizing: border-box;
         display: inline-block;
         position: relative;
         width: 100%;
