--- a/site/src/views/index.ejs
+++ b/site/src/views/index.ejs
@@ -30,25 +30,25 @@
     <section class="products">
     <article class="products1">
     <div class="image">
-        <a href="/products/detail/1">
-             <img src="/img/producto1.jpg" alt="">
+        <a href="/products/detail/<%= products[0].id %> ">
+             <img src="/img/<%= products[0].image1 %> " alt="">
         </a>
     </div>
     <div>
-        <a href="/products/detail/2">
-            <img src="/img/producto2.jpeg" alt="">
+        <a href="/products/detail/<%= products[1].id %> ">
+            <img src="/img/<%= products[1].image1 %> " alt="">
        </a>
     </div>
     </article>
     <article class="products2">
     <div>
-        <a href="/products/detail/3">
-            <img src="/img/producto3.jpeg" alt="">
+        <a href="/products/detail/<%= products[2].id %> ">
+            <img src="/img/<%= products[2].image1 %> " alt="">
        </a>
     </div>
     <div>
-        <a href="/products/detail/4">
-            <img src="/img/producto4.jpeg" alt="">
+        <a href="/products/detail/<%= products[3].id %> ">
+            <img src="/img/<%= products[3].image1 %> " alt="">
        </a>
     </div>
     </article>
@@ -76,29 +76,29 @@
     <section class="catalogo-productos">
         <article class="producto1">
             <div>
-                <a href="/products/detail/1">
-                    <img src="/img/producto1.jpg" alt="">
+                <a href="/products/detail/<%= products[0].id %> ">
+                    <img src="/img/<%= products[0].image1 %> " alt="">
                </a>
             </div>
         </article>
         <article class="producto2">
             <div>
-                <a href="/products/detail/2">
-                    <img src="/img/producto2.jpeg" alt="">
+                <a href="/products/detail/<%= products[1].id %> ">
+                    <img src="/img/<%= products[1].image1 %> " alt="">
                </a>
             </div>
         </article>
         <article class="producto3">
             <div>
-                <a href="/products/detail/3">
-                    <img src="/img/producto3.jpeg" alt="">
+                <a href="/products/detail/<%= products[2].id %> ">
+                    <img src="/img/<%= products[2].image1 %> " alt="">
                </a>
             </div>
         </article>
         <article class="producto4">
             <div>
-                <a href="/products/detail/4">
-                    <img src="/img/producto4.jpeg" alt="">
+                <a href="/products/detail/<%= products[3].id %> ">
+                    <img src="/img/<%= products[3].image1 %> " alt="">
                </a>
             </div>
         </article>
