correcciones CRUD - metodos -

--- a/site/src/views/index.ejs
+++ b/site/src/views/index.ejs
@@ -31,24 +31,24 @@
     <article class="products1">
     <div class="image">
         <a href="/products/detail/<%= products[0].id %> ">
-             <img src="/img/<%= products[0].image1 %> " alt="">
+             <img src="/img/<%= products[0].images[0] %> " alt="">
         </a>
     </div>
     <div>
         <a href="/products/detail/<%= products[1].id %> ">
-            <img src="/img/<%= products[1].image1 %> " alt="">
+            <img src="/img/<%= products[1].images[0] %> " alt="">
        </a>
     </div>
     </article>
     <article class="products2">
     <div>
         <a href="/products/detail/<%= products[2].id %> ">
-            <img src="/img/<%= products[2].image1 %> " alt="">
+            <img src="/img/<%= products[2].images[0] %> " alt="">
        </a>
     </div>
     <div>
         <a href="/products/detail/<%= products[3].id %> ">
-            <img src="/img/<%= products[3].image1 %> " alt="">
+            <img src="/img/<%= products[3].images[0] %> " alt="">
        </a>
     </div>
     </article>
@@ -77,28 +77,28 @@
         <article class="producto1">
             <div>
                 <a href="/products/detail/<%= products[0].id %> ">
-                    <img src="/img/<%= products[0].image1 %> " alt="">
+                    <img src="/img/<%= products[0].images[0] %> " alt="">
                </a>
             </div>
         </article>
         <article class="producto2">
             <div>
                 <a href="/products/detail/<%= products[1].id %> ">
-                    <img src="/img/<%= products[1].image1 %> " alt="">
+                    <img src="/img/<%= products[1].images[0] %> " alt="">
                </a>
             </div>
         </article>
         <article class="producto3">
             <div>
                 <a href="/products/detail/<%= products[2].id %> ">
-                    <img src="/img/<%= products[2].image1 %> " alt="">
+                    <img src="/img/<%= products[2].images[0] %> " alt="">
                </a>
             </div>
         </article>
         <article class="producto4">
             <div>
                 <a href="/products/detail/<%= products[3].id %> ">
-                    <img src="/img/<%= products[3].image1 %> " alt="">
+                    <img src="/img/<%= products[3].images[0] %> " alt="">
                </a>
             </div>
         </article>
