--- a/site/src/views/products/productAdd.ejs
+++ b/site/src/views/products/productAdd.ejs
@@ -51,7 +51,7 @@
               </div> -->
               <div class="mb-3">
                 <label for="productImagen" class="form-label">Imagen</label>
-                <input type="file" class="form-control" id="productImagen" name="image" accept="image/*" multiple>
+                <input type="file" class="form-control" id="productImagen" name="images" accept="image/*" multiple>
                 <span class="text-danger"><%= typeof error != 'undefined' ? error : null %> </span>
               </div>
               
