--- a/site/public/css/login.css
+++ b/site/public/css/login.css
@@ -56,6 +56,13 @@
     display: none;
 }
 
+.login main form .error{
+    color: red;
+    font-size: 14px;
+    border: none;
+    padding: 0;
+}
+
 @media (min-width: 480px){
     /* section */
 
