--- a/site/public/css/header.css
+++ b/site/public/css/header.css
@@ -34,7 +34,6 @@ header article .botones .barra-de-busqueda {
 
 header article .botones div{
     display: inline-block;
-    border-left: 1px solid black;
     font-size: 22px;
     padding: 2px 5px 2px 10px;
 }
@@ -44,12 +43,17 @@ header article .botones a{
 }
 
 header article .avatar{
-    padding: 0;
+    position: relative;
 }
 
 header article img{
-    width: 100%;
-    height: 50px;
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    border: 1px solid var(--color-1);
+    position: absolute;
+    right: -10px;
+    bottom: -5px;
 }
 
 .ol {
@@ -98,6 +102,11 @@ header article img{
     header article .botones .barra-de-busqueda input{
         height: 20px;
     }
+
+    header article img{
+        bottom: 0;
+    }
+
 }
 @media (min-width: 1279px){
     
