--- a/site/src/views/products/productDetail.ejs
+++ b/site/src/views/products/productDetail.ejs
@@ -47,7 +47,7 @@
                                 <input type="radio" id="color2" name="color">
                                 <label class="color2" for="color2"></label>
                                 <input type="radio" id="color3" name="color">
-                                <label class="color3" for="color3"></label>
+                                <label class="color3" for="color3"></label> -->
                             </form>
                         <% } %>
                         <form action="resultado.html" method="POST">
