--- a/site/src/views/products/productAdd.ejs
+++ b/site/src/views/products/productAdd.ejs
@@ -21,10 +21,10 @@
                 <label for="formGroupExampleInput2" class="form-label">Precio</label>
                 <input type="number" class="form-control" id="formGroupExampleInput2" name="price" >
               </div>
-              <div class="mb-3">
+<!--               <div class="mb-3">
                 <label for="formGroupExampleInput2" class="form-label">Codigo</label>
                 <input type="number" class="form-control" id="formGroupExampleInput2" name="cod" >
-              </div>
+              </div> -->
               <div class="mb-3">
                 <label for="category" class="form-label">Categoría</label>
 
@@ -35,11 +35,24 @@
             <% }) %>
                 </select>
               </div>
-              <label for="exampleColorInput" class="form-label">Color</label>
-<input type="color" class="form-control form-control-color" id="exampleColorInput" value="#000" title="Choose your color">
-            <div class="mb-3">
-             <label for="formGroupExampleInput" class="form-label">Talle</label>
-                <input type="text" class="form-control" id="formGroupExampleInput" name="talle" >
+<!--               <label for="exampleColorInput" class="form-label">Color</label>
+<input type="color" class="form-control form-control-color" id="exampleColorInput" value="#000" title="Choose your color"> -->
+                <label for="formGroupExampleInput" class="form-label">Talles</label><br>
+                <div class="form-check form-check-inline mb-3">
+                  <input class="form-check-input" type="checkbox" id="inlineCheckbox1" name="talle" value="38">
+                  <label class="form-check-label" for="inlineCheckbox1">38</label>
+                </div>
+                <div class="form-check form-check-inline mb-3">
+                  <input class="form-check-input" type="checkbox" id="inlineCheckbox1" name="talle" value="39">
+                  <label class="form-check-label" for="inlineCheckbox1">39</label>
+                </div>
+                <div class="form-check form-check-inline mb-3">
+                  <input class="form-check-input" type="checkbox" id="inlineCheckbox1" name="talle" value="40">
+                  <label class="form-check-label" for="inlineCheckbox1">40</label>
+                </div>
+                <div class="form-check form-check-inline mb-3">
+                  <input class="form-check-input" type="checkbox" id="inlineCheckbox1" name="talle" value="41">
+                  <label class="form-check-label" for="inlineCheckbox1">41</label>
                 </div>
                 <div class="mb-3">
                 <label for="floatingTextarea">Descripción</label>
