--- a/site/src/views/products/productEdit.ejs
+++ b/site/src/views/products/productEdit.ejs
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -11,7 +12,7 @@
     </header>
     <main>
         <h2>editar producto</h2>
-        <form action="/products/edit/<%= product.id %>?_method=PUT" method="POST" enctype="multipart/form-data">
+        <form action="/products/edit/<%= product.id %>?_method=PUT" method="POST" >
             <div class="mb-3">
                 <label for="formGroupExampleInput" class="form-label">Nombre</label>
                 <input type="text" class="form-control" id="formGroupExampleInput" name="name" value="<%= product.name %>">
@@ -20,25 +21,38 @@
                 <label for="formGroupExampleInput2" class="form-label">Precio</label>
                 <input type="number" class="form-control" id="formGroupExampleInput2" name="price" value="<%= product.price %>">
               </div>
-              <div class="mb-3">
+    <!--               <div class="mb-3">
                 <label for="formGroupExampleInput2" class="form-label">Codigo</label>
-                <input type="number" class="form-control" id="formGroupExampleInput2" name="cod" value="<%= product.cod %>">
-              </div>
+                <input type="number" class="form-control" id="formGroupExampleInput2" name="cod">
+              </div> -->
               <div class="mb-3">
                 <label for="category" class="form-label">Categoría</label>
-
+    
                 <select id="category" class="form-select" name="category">
                     <% categories.forEach(category => { %>
                         <option value="<%= category %>" <%= category === product.category ? 'selected' : null %> ><%= category %></option>
                        <% }) %>
                   </select>
               </div>
-              <label for="exampleColorInput" class="form-label">Color</label>
-<input type="color" class="form-control form-control-color" id="exampleColorInput" value="<%= product.color %>" title="Choose your color" name="color">
-            <div class="mb-3">
-             <label for="formGroupExampleInput" class="form-label">Talle</label>
-                <input type="text" class="form-control" id="formGroupExampleInput" name="talle" value="<%= product.talle %>">
-                </div>
+    <!--               <label for="exampleColorInput" class="form-label">Color</label>
+    <input type="color" class="form-control form-control-color" id="exampleColorInput" title="Choose your color" name="color">
+    -->                <label for="formGroupExampleInput" class="form-label">Talles</label><br>
+                    <div class="form-check form-check-inline mb-3">
+                        <input class="form-check-input" type="checkbox" id="inlineCheckbox1" name="talle" value="38">
+                        <label class="form-check-label" for="inlineCheckbox1">38</label>
+                    </div>
+                    <div class="form-check form-check-inline mb-3">
+                        <input class="form-check-input" type="checkbox" id="inlineCheckbox1" name="talle" value="39">
+                        <label class="form-check-label" for="inlineCheckbox1">39</label>
+                    </div>
+                    <div class="form-check form-check-inline mb-3">
+                        <input class="form-check-input" type="checkbox" id="inlineCheckbox1" name="talle" value="40">
+                        <label class="form-check-label" for="inlineCheckbox1">40</label>
+                    </div>
+                    <div class="form-check form-check-inline mb-3">
+                        <input class="form-check-input" type="checkbox" id="inlineCheckbox1" name="talle" value="41">
+                        <label class="form-check-label" for="inlineCheckbox1">41</label>
+                    </div>
                 <div class="mb-3">
                 <label for="floatingTextarea">Descripción</label>
                 <textarea class="form-control" id="floatingTextarea" name="description" ><%= product.description %></textarea>
