--- a/site/src/views/products/productEdit.ejs
+++ b/site/src/views/products/productEdit.ejs
@@ -12,7 +12,7 @@
     </header>
     <main>
         <h2>editar producto</h2>
-        <form action="/products/edit/<%= product.id %>?_method=PUT" method="POST" >
+        <form action="/products/edit/<%= product.id %>?_method=PUT" method="POST" enctype="multipart/form-data">
             <div class="mb-3">
                 <label for="formGroupExampleInput" class="form-label">Nombre</label>
                 <input type="text" class="form-control" id="formGroupExampleInput" name="name" value="<%= product.name %>">
@@ -36,23 +36,18 @@
               </div>
     <!--               <label for="exampleColorInput" class="form-label">Color</label>
     <input type="color" class="form-control form-control-color" id="exampleColorInput" title="Choose your color" name="color">
-    -->                <label for="formGroupExampleInput" class="form-label">Talles</label><br>
-                    <div class="form-check form-check-inline mb-3">
-                        <input class="form-check-input" type="checkbox" id="inlineCheckbox1" name="talle" value="38">
-                        <label class="form-check-label" for="inlineCheckbox1">38</label>
-                    </div>
-                    <div class="form-check form-check-inline mb-3">
-                        <input class="form-check-input" type="checkbox" id="inlineCheckbox1" name="talle" value="39">
-                        <label class="form-check-label" for="inlineCheckbox1">39</label>
-                    </div>
-                    <div class="form-check form-check-inline mb-3">
-                        <input class="form-check-input" type="checkbox" id="inlineCheckbox1" name="talle" value="40">
-                        <label class="form-check-label" for="inlineCheckbox1">40</label>
-                    </div>
-                    <div class="form-check form-check-inline mb-3">
-                        <input class="form-check-input" type="checkbox" id="inlineCheckbox1" name="talle" value="41">
-                        <label class="form-check-label" for="inlineCheckbox1">41</label>
-                    </div>
+    -->             <label for="formGroupExampleInput" class="form-label">Talles</label><br>
+                    <% talles.forEach(element => { %>
+                        <div class="form-check form-check-inline mb-3">
+                            <input class="form-check-input" type="checkbox" id="inlineCheckbox1" name="talle" value="<%= element %>">
+                            <% product.talle.forEach(item => { %>
+                                <% if (element == item) { %>
+                                    <input class="form-check-input" type="checkbox" id="inlineCheckbox1" name="talle" value="<%= element %>" checked>
+                                <% } %>
+                            <% }) %>
+                            <label class="form-check-label" for="inlineCheckbox1"><%= element %></label>
+                        </div>
+                    <% }) %>
                 <div class="mb-3">
                 <label for="floatingTextarea">Descripción</label>
                 <textarea class="form-control" id="floatingTextarea" name="description" ><%= product.description %></textarea>
