--- a/site/src/views/users/login.ejs
+++ b/site/src/views/users/login.ejs
@@ -31,6 +31,12 @@
                 <span class="error"><%= errors.password.msg %></span>
                <% } %>
             </div>
+            <div class="d-flex justify-content-end" style="flex-direction: column; align-items: center;">
+                <div class="mb-3 form-check"> 
+                    <input type="checkbox" name="remenber" class="form-check-input" id="exampleCheck1">
+                    <label class="form-check-label" for="exampleCheck1">Recordarme</label>
+                  </div>
+            </div>
             </div>
             <span>No recuerdas tu contraseña? <a href="">click aca</a></span>
             <div><button type="submit" class="btn btn-primary" style="margin: 20px auto; display: flex; justify-content: center; flex-direction: column; align-items: center;">Ingresar</button></div>
