correcciones en login y register y creacion de middleware localUserCheck

--- a/site/public/css/login.css
+++ b/site/public/css/login.css
@@ -25,6 +25,8 @@
 }
 
 .login main div h6{
+    display: flex;
+    justify-content: center;
     color: #000;
     text-transform: uppercase;
     border-top: 1px solid var(--color-3);
