--- a/site/src/views/users/login.ejs
+++ b/site/src/views/users/login.ejs
@@ -15,7 +15,7 @@
         <h3>Ingresa a tu cuenta</h3>
         <div>
             <h6>Datos de usuario</h6>
-            <p>Si no estas registrado <a href="">click aca</a></p>
+            <p>Si no estas registrado <a href="/users/register">click aca</a></p>
         </div>
         <form method="POST">
             <div class="mb-3">
