--- a/site/public/css/register.css
+++ b/site/public/css/register.css
@@ -25,6 +25,8 @@
     box-shadow: 0px 0px 20px #000;
 }
 .register main div h6{
+    display: flex;
+    justify-content: center;
     color: #000;
     text-transform: uppercase;
     border-top: 1px solid var(--color-4);
